--- a/styles.css
+++ b/styles.css
@@ -292,9 +292,12 @@ footer {
     .book-card {
         padding: 25px;
     }
+    .btn-card {
+        width: 15vh;
+    }
 
     .footer {
-        font-size: 15px;
+        font-size: 20px;
     }
 
     .modal {
