--- a/styles.css
+++ b/styles.css
@@ -266,6 +266,11 @@ footer {
 }
 
 @media only screen and (max-width: 2000px) {
+    .header {
+    width: 100%;
+    height: 7vh;
+    }
+    
     #addBookBtn {
         height: 4vh;
     }
