--- a/styles.css
+++ b/styles.css
@@ -265,7 +265,7 @@ footer {
     background-color: rgba(231, 123, 184, 0.7);
 }
 
-@media only screen and (max-width: 2000px) {
+@media only screen and (min-width: 1800px) {
     .header {
     width: 100%;
     height: 7vh;
