--- a/styles.css
+++ b/styles.css
@@ -312,7 +312,10 @@ footer {
     
     .books-grid {
         max-height: 600px;
-        width: 65%;
+        width: 70%;
+    }
+    .book-card {
+        padding: 20px;
     }
 
     .btn-card {
