--- a/styles.css
+++ b/styles.css
@@ -304,23 +304,23 @@ footer {
   
 @media only screen and (max-width: 430px) {
     .header {
-        font-size: 15px;
+        font-size: 12px;
     }
-    main {
-        width: 100%;
-    }
+
     .information {
         width: 40%;
     }
     .element {
         font-size: 9.5px;
+        padding-top: 20px;
+        padding-right: 15px;
     }
     
     .books-grid {
         max-height: 650px;
     }
     .book-card {
-        padding: 20px;
+        padding: 15px;
     }
 
     .btn-card {
